@@ -1,3 +1,11 @@
+2022-10-20T01:59:05Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3286282382 # 538
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 108 152 / 111 156
+* notice: next accum: outdated-unq outdated-all / unq all: 109 153 / 111 156
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-05] / []
+
 2022-10-17T16:37:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3266939945 # 531
 * notice: last 14d: unq all: 3 4
